# Crust

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: main.yml
src/: CrustAllocator.cpp  CrustAllocator.hpp  CrustCommon.hpp  CrustInternal.hpp  CrustLogger.hpp  CrustQuarantine.cpp  CrustQuarantine.hpp  CrustShadow.cpp  CrustShadow.hpp
test/: test_double_free.cpp  test_invalid_free.cpp  test_overflow.cpp  test_program.cpp  test_stress.cpp  test_uaf.cpp
